# OpenGLTemplate

./: .gitignore  CMakeLists.txt  README.md
OpenGL/: CMakeLists.txt  main.cpp
OpenGL.xcodeproj/: project.pbxproj
OpenGL/assets/shaders/: BasicShader.shader
OpenGL/include/: IndexBuffer.hpp  Texture.hpp  VertexArray.hpp
OpenGL/src/: Application.cpp  IndexBuffer.cpp  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
assets/shaders/: BasicShader.shader
assets/shaders/web/: BasicShader.shader
include/: Camera.hpp  Renderer.hpp  Shader.hpp  VertexBuffer.hpp  VertexBufferElement.hpp  VertexBufferLayout.hpp
src/: Application.cpp  Renderer.cpp  Shader.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
